web-infras/parser/tests/fixtures/babel/es2017/async-functions/async-function-and-non-bmp-character/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|async functionğ¬ f() {}
 |     ^
[SyntaxError]: Missing semicolon or line terminator. (1,18)
1|async functionğ¬ f() {}
 |                ^
[SyntaxError]: Missing semicolon or line terminator. (1,22)
1|async functionğ¬ f() {}
 |                    ^
